[package]
name = "rust-feature-showcase"
version = "0.1.0"
edition = "2021"
description = "A compact Rust project that showcases core language and ecosystem features."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

